# segway_rmp_200

./: .gitlab-ci.yml  CMakeLists.txt  Findsegway_rmp_200.cmake  README.md  ReadMe.txt
doc/: doxygen_project_name.conf  main.dox
include/: segway_rmp200.h  segway_rmp200_exceptions.h
scripts/: 99-segway-usb.rules
scripts/debian/: postinst  prerm
src/: CMakeLists.txt  segway_rmp200.cpp  segway_rmp200.h  segway_rmp200_exceptions.cpp
src/examples/: CMakeLists.txt  motionModelData.cpp  test_segwayRMP200.cpp  test_segwayRMP200_displacement.cpp
